--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -2,6 +2,8 @@
 // Type Settings
 // ============================================================================
 
+ // @todo:- [Underlining](https://medium.com/p/7c03a9274f9)
+
 // Magic numbers
 $magic-number:        18px !default;
 $magic-ratio:         1.5 !default;
