--- a/assets/stylesheets/src/base/base.scss
+++ b/assets/stylesheets/src/base/base.scss
@@ -33,8 +33,8 @@
 // // Tables
 
 // // Media
-// @import "images";
-// @import "media";
+@import "images";
+@import "media";
 
 // // Utilities
 @import "utilities";
