--- a/assets/stylesheets/src/settings/mixins/_rem.scss
+++ b/assets/stylesheets/src/settings/mixins/_rem.scss
@@ -20,6 +20,10 @@
     }
   }
 
-  #{$property}: $legacy-values;
-  #{$property}: $modern-values;
+  @if $px-fallback {
+    #{$property}: $legacy-values;
+    #{$property}: $modern-values;
+  } @else {
+    #{$property}: $modern-values;
+  }
 }
