--- a/assets/stylesheets/src/base/_main.scss
+++ b/assets/stylesheets/src/base/_main.scss
@@ -44,6 +44,7 @@ body {
     @include font-smoothing();
   }
   @include hyphens(auto);
+  @include outer-container;
   background-color: $body-bg;
   color: $text-color;
   line-height: $line-height;
