--- a/assets/stylesheets/src/settings/_components.scss
+++ b/assets/stylesheets/src/settings/_components.scss
@@ -7,9 +7,9 @@
 // of the component's .scss file.
 
 // Border radius
-$border-radius-base:        4px !default;
+$border-radius-base:        3px !default;
 $border-radius-lg:          6px !default;
-$border-radius-sm:          3px !default;
+$border-radius-sm:          2px !default;
 
 // Borders
 $border-color-base:         $gray-lighter;
@@ -18,19 +18,19 @@ $border-size-sm:            1px !default;
 $border-size-lg:            4px !default;
 
 // Padding
-$padding-base-vertical:     0.5em !default;
-$padding-base-horizontal:   1em !default;
-$padding-lg-vertical:       1em !default;
-$padding-lg-horizontal:     1.5em !default;
-$padding-sm-vertical:       0.35em !default;
-$padding-sm-horizontal:     0.75em !default;
-$padding-xs-vertical:       0.25em !default;
-$padding-xs-horizontal:     0.5em !default;
+$padding-base-vertical:     6px !default;
+$padding-base-horizontal:  12px !default;
+$padding-lg-vertical:      10px !default;
+$padding-lg-horizontal:    16px !default;
+$padding-sm-vertical:       5px !default;
+$padding-sm-horizontal:    10px !default;
+$padding-xs-vertical:       1px !default;
+$padding-xs-horizontal:     5px !default;
 
 // Active element colors
 $component-active-color:    white !default;
 $component-active-bg:       $color-primary !default;
 
 // Animation
-$timing-base:               .15s;
+$timing-base:               .1s;
 $easing-base:               ease-in-out;
