--- a/assets/stylesheets/src/settings/_debug.scss
+++ b/assets/stylesheets/src/settings/_debug.scss
@@ -13,7 +13,7 @@ $visual-grid-index:         back !default;
 $visual-grid-opacity:       0.5 !default;
 
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
-$visual-baseline:           true !default;
+$visual-baseline:           false !default;
 $visual-baseline-color:     $red !default; // hex value without the #
 
 // Show a ruler at the top of the page to help visualize breakpoint presets.
