--- a/assets/stylesheets/src/base/_forms.scss
+++ b/assets/stylesheets/src/base/_forms.scss
@@ -39,6 +39,7 @@ legend {
 label {
   display: inline-block;
   font-weight: $font-weight-bold;
+  margin-bottom: $padding-base-vertical;
 
   &[required]:after {
     content: "*";
@@ -59,7 +60,7 @@ label {
 
 .form-control {
   @include box-shadow(inset 0 1px 3px rgba(black, .075));
-  @include margin-bottom(1);
+  @include margin-bottom(.5);
   @include placeholder();
   @include rem(height, $input-height);
   @include transition(border-color $easing-base $timing-base);
@@ -86,6 +87,65 @@ label {
   }
 }
 
+// Checkboxes and radios
+.radio,
+.checkbox {
+  display: block;
+  margin: 10px 0;
+  min-height: $leading; // clear the floating input if there is no label text
+
+  label {
+    cursor: pointer;
+    display: inline;
+    font-weight: normal;
+  }
+}
+
+// .radio input[type="radio"],
+// .radio-inline input[type="radio"],
+// .checkbox input[type="checkbox"],
+// .checkbox-inline input[type="checkbox"] {
+//   float: left;
+//   margin-left: -20px;
+// }
+
+// .radio + .radio,
+// .checkbox + .checkbox {
+//   margin-top: -5px; // Move up sibling radios or checkboxes for tighter spacing
+// }
+
+// // Radios and checkboxes on same line
+// .radio-inline,
+// .checkbox-inline {
+//   display: inline-block;
+//   padding-left: 20px;
+//   margin-bottom: 0;
+//   vertical-align: middle;
+//   font-weight: normal;
+//   cursor: pointer;
+// }
+
+// .radio-inline + .radio-inline,
+// .checkbox-inline + .checkbox-inline {
+//   margin-top: 0;
+//   margin-left: 10px; // space out consecutive inline controls
+// }
+
+// // Apply same disabled cursor tweak as for inputs
+// // Note: Neither radios nor checkboxes can be readonly.
+// input[type="radio"],
+// input[type="checkbox"],
+// .radio,
+// .radio-inline,
+// .checkbox,
+// .checkbox-inline {
+//   &[disabled],
+//   fieldset[disabled] & {
+//     cursor: not-allowed;
+//   }
+// }
+
+
 // Layouts
 // ----------------------------------------------------------------------------
 
@@ -93,7 +153,7 @@ label {
 .form-inline {
   .form-control {
     display: inline-block;
-    margin-bottom: 0;
+    // margin-bottom: 0;
   }
 }
 
@@ -102,6 +162,7 @@ label {
 $form-horizontal-label-width: 12em;
 
 @include media($grid-break) {
+
   .form-horizontal {
     .form-control {
       display: inline-block;
@@ -112,8 +173,9 @@ $form-horizontal-label-width: 12em;
       @include margin-bottom(.5);
 
       label {
-        display: inline-block;
-        margin: 0 1em 0 0;
+        float: left;
+        line-height: $input-height;
+        margin-right: 1em;
         vertical-align: middle;
         width: $form-horizontal-label-width;
       }
@@ -121,7 +183,11 @@ $form-horizontal-label-width: 12em;
 
     .form-controls {
       margin-left: $form-horizontal-label-width + 1em;
+      width: auto;
+
+      label { padding-left: 0; }
     }
+
   }
 
   // Grouped inputs
@@ -129,6 +195,7 @@ $form-horizontal-label-width: 12em;
   .input-group {
 
   }
+
 }
 
 // Help text
@@ -190,69 +257,65 @@ $form-horizontal-label-width: 12em;
 // // Append & Prepend
 // // ----------------------------------------------------------------------------
 
-// // Layouts
-// // ----------------------------------------------------------------------------
+// Normalize specific inputs
+// ----------------------------------------------------------------------------
 
+// Some basic normalization is required to ensure optimum display with or
+// without those classes to better address browser inconsistencies.
 
-// // Normalize specific inputs
-// // ----------------------------------------------------------------------------
+// Search
+//
+// This overrides the extra rounded corners on search inputs in iOS so that our
+// `.form-control` class can properly style them. Note that this cannot simply
+// be added to `.form-control` as it's not specific enough. For details, see
+// https://github.com/twbs/bootstrap/issues/11586.
+// Override content-box in Normalize (* isn't specific enough)
 
-// // Some basic normalization is required to ensure optimum display with or
-// // without those classes to better address browser inconsistencies.
+input[type="search"] {
+  -webkit-appearance: none;
+  @include box-sizing(border-box);
+}
 
-// // Search
-// //
-// // This overrides the extra rounded corners on search inputs in iOS so that our
-// // `.form-control` class can properly style them. Note that this cannot simply
-// // be added to `.form-control` as it's not specific enough. For details, see
-// // https://github.com/twbs/bootstrap/issues/11586.
-// // Override content-box in Normalize (* isn't specific enough)
+// File
+// Set the height of file controls to match text inputs
+input[type="file"] {
+  @include tab-focus();
+  display: block;
+}
 
-// input[type="search"] {
-//   -webkit-appearance: none;
-//   @include box-sizing(border-box);
-// }
+// Range
+// Make range inputs behave like textual form controls
+input[type="range"] {
+  display: block;
+  width: 100%;
+}
 
-// // File
-// // Set the height of file controls to match text inputs
-// input[type="file"] {
-//   @include tab-focus();
-//   display: block;
-// }
+// Select
+// Make multiple select elements height not fixed
+select[multiple],
+select[size] {
+  height: auto;
+}
 
-// // Range
-// // Make range inputs behave like textual form controls
-// input[type="range"] {
-//   display: block;
-//   width: 100%;
-// }
+// Textarea
+// Reset height for `textarea`s
+textarea.form-control {
+  height: auto;
+}
 
-// // Select
-// // Make multiple select elements height not fixed
-// select[multiple],
-// select[size] {
-//   height: auto;
-// }
+// Date
+// In Mobile Safari, date inputs require a pixel line-height that matches the
+// given height of the input.
+input[type="date"] {
+  line-height: $input-height;
+}
 
-// // Textarea
-// // Reset height for `textarea`s
-// textarea.form-control {
-//   height: auto;
-// }
-
-// // Date
-// // In Mobile Safari, date inputs require a pixel line-height that matches the
-// // given height of the input.
-// input[type="date"] {
-//   line-height: $input-height;
-// }
-
-// // Checkboxes & Radios
-// // Position radios and checkboxes better
-// input[type="radio"],
-// input[type="checkbox"] {
-//   @include tab-focus();
-//   margin: 4px 0 0;
-//   margin-top: 1px \9; /* IE8-9 */
-//   line-height: normal;
-// }
+// Checkboxes & Radios
+// Position radios and checkboxes better
+input[type="radio"],
+input[type="checkbox"] {
+  @include tab-focus();
+  margin: 4px 0 0;
+  margin-top: 1px \9; /* IE8-9 */
+  line-height: normal;
+}
