--- a/assets/stylesheets/src/settings/_debug.scss
+++ b/assets/stylesheets/src/settings/_debug.scss
@@ -2,8 +2,7 @@
 // Debug Settings
 // ============================================================================
 
-// Debug mode will visually highlight any potential markup/accessibility quirks
-// in the browser. Set to `true` or `false`.
+// Visually highlight any potential markup/accessibility quirks in the browser.
 $debug-mode:                false !default;
 
 // Set $visual-grid to true to make sure your site is lining up as expected
@@ -15,8 +14,3 @@ $visual-grid-opacity:       0.5 !default;
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
 $visual-baseline:           false !default;
 $visual-baseline-color:     $red !default; // hex value without the #
-
-// Show a ruler at the top of the page to help visualize breakpoint presets.
-// They will be automatically updated based on your settings in breakpoints.scss
-// @todo: create breakpoint ruler
-$breakpoint-ruler:          false !default;
