--- a/assets/stylesheets/src/settings/_breakpoints.scss
+++ b/assets/stylesheets/src/settings/_breakpoints.scss
@@ -2,18 +2,17 @@
 // Breakpoint Variables
 // ============================================================================
 
-// Sets the default media feature that media() and new-breakpoint() revert to
-// when only a breakpoint value is passed.
+// Set the default media feature for media() and new-breakpoint()
 $default-feature:       min-width;
 
-// Default screen size breakpoints to use with media queries.
+// Screen size breakpoints to use with media queries
 $screen-xs:             em( 480) !default;
 $screen-sm:             em( 640) !default;
 $screen-md:             em( 800) !default;
 $screen-lg:             em(1024) !default;
 $screen-xl:             em(1600) !default;
 
-// Breakpoint presets
+// Presets
 $screen-xs-up:          new-breakpoint(min-width $screen-xs);
 $screen-sm-up:          new-breakpoint(min-width $screen-sm);
 $screen-md-up:          new-breakpoint(min-width $screen-md);
@@ -26,5 +25,6 @@ $screen-md-down:        new-breakpoint(max-width $screen-md);
 $screen-lg-down:        new-breakpoint(max-width $screen-lg);
 $screen-xl-down:        new-breakpoint(max-width $screen-xl);
 
-// The point at which the grid switches to favor larger screens
+// The point at which the grid switches to favor larger screens. Used so you
+// don't have to remember which screen size most of the changes come in at.
 $grid-break:            $screen-sm;
