--- a/assets/stylesheets/src/settings/_grid.scss
+++ b/assets/stylesheets/src/settings/_grid.scss
@@ -6,7 +6,7 @@
 // If $column is set to a relative value, the grid will be fluid.
 // @source: http://neat.bourbon.io/docs/#variables
 
-$max-width:                 convert-unit(960px, em);
+$max-width:                 u(960px, em);
 $grid-columns:              12;
 $column:                    golden-ratio(1%, 3);
 $gutter:                    golden-ratio(1%, 1);
