--- a/assets/stylesheets/src/styles.scss
+++ b/assets/stylesheets/src/styles.scss
@@ -15,3 +15,17 @@
 @import "settings/settings";
 @import "base/base";
 @import "components/components";
+
+// Styles like this
+// Size in rems with no px fallback
+// ----------------------------------------------------------------------------
+
+/*
+
+.element {
+  font-size: $font-size-h1;
+  line-height: $leading($font-size-h1);
+  margin-bottom: $leading 0;
+}
+
+*/
