--- a/assets/stylesheets/src/components/components.scss
+++ b/assets/stylesheets/src/components/components.scss
@@ -10,6 +10,13 @@
 // styles, create a new `.scss` file and import it below. All partials
 // should begin with an underscore.
 
+
+// Base
+@import "buttons";
+// @import "forms";
+// @import "code";
+// @import "tables";
+
 // Navigation
 
 // Media
