--- a/assets/stylesheets/src/settings/functions/_convert-unit.scss
+++ b/assets/stylesheets/src/settings/functions/_convert-unit.scss
@@ -5,7 +5,7 @@
 // Convert a unit to and from px, em, rem, and %.
 // convert-unit(12px, em)
 
-@function convert-unit($val, $to-unit, $base: $magic-number) {
+@function convert-unit($val, $to-unit, $base: $font-size-root) {
   $base: strip-unit($base);
 
   // px => whatever
@@ -86,4 +86,8 @@
   }
 
   @return null;
+}
+
+@function u($val, $to-unit, $base: $font-size-root) {
+  @return convert-unit($val, $to-unit, $base: $font-size-root);
 }
