--- a/assets/stylesheets/src/settings/_colors.scss
+++ b/assets/stylesheets/src/settings/_colors.scss
@@ -19,23 +19,23 @@ $violet:                #6867B9 !default;
 
 // Abstractions
 $color-primary:         $blue !default;
+$color-success:         $green !default;
+$color-info:            $blue !default;
+$color-warning:         $orange !default;
+$color-danger:          $red !default;
 
-$state-success:         $green !default;
-$state-success-text:    $state-success !default;
+$state-success-text:    $color-success !default;
 $state-success-bg:      lighten($state-success-text, 20%) !default;
 $state-success-border:  darken($state-success-bg, 5%) !default;
 
-$state-info:            $blue !default;
-$state-info-text:       $state-info !default;
+$state-info-text:       $color-info !default;
 $state-info-bg:         lighten($state-info-text, 20%) !default;
 $state-info-border:     darken($state-info-bg, 7%) !default;
 
-$state-warning:         $orange !default;
-$state-warning-text:    $state-warning !default;
+$state-warning-text:    $color-warning !default;
 $state-warning-bg:      lighten($state-warning-text, 20%) !default;
 $state-warning-border:  darken($state-warning-bg, 5%) !default;
 
-$state-danger:          $red !default;
-$state-danger-text:     $state-danger !default;
+$state-danger-text:     $color-danger !default;
 $state-danger-bg:       lighten($state-danger-text, 20%) !default;
 $state-danger-border:   darken($state-danger-bg, 5%) !default;
