--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -11,9 +11,9 @@ $font-family-base:    $sans !default;
 // Sizes
 $font-size-root:      18px !default;
 $font-size-base:      1rem !default;
+
 $font-size-lg:        modular-scale($font-size-base,  1, 1.25) !default;
 $font-size-sm:        modular-scale($font-size-base, -1, 1.25) !default;
-
 $font-size-h1:        modular-scale($font-size-base,  5, 1.25) !default;
 $font-size-h2:        modular-scale($font-size-base,  4, 1.25) !default;
 $font-size-h3:        modular-scale($font-size-base,  3, 1.25) !default;
@@ -22,13 +22,20 @@ $font-size-h5:        modular-scale($font-size-base,  1, 1.25) !default;
 $font-size-h6:        modular-scale($font-size-base,  0, 1.25) !default;
 
 // Line height
-$line-height-ratio:   1.6 !default;
+$line-height:         1.6 !default;
 $leading:             $font-size-base * $line-height !default;
 $round-to-half-line:  true !default; // used for the vertical baseline grid
 
 // Colors
 $text-color:          $gray-dark !default;
-$text-muted:          $gray-light !default;
-
+$text-muted-color:    $gray-light !default;
 $link-color:          $color-primary !default;
 $link-hover-color:    darken($link-color, 15%) !default;
+
+// Weights
+$font-weight-thin:    100 !default;
+$font-weight-light:   300 !default;
+$font-weight-normal:  400 !default;
+$font-weight-medium:  500 !default;
+$font-weight-bold:    700 !default;
+$font-weight-black:   900 !default;
