--- a/assets/stylesheets/src/settings/mixins/_leading-borders.scss
+++ b/assets/stylesheets/src/settings/mixins/_leading-borders.scss
@@ -5,20 +5,14 @@
 // Add borders to elements without upsetting the baseline grid.
 
 @mixin border($width: 1px, $lines: 1, $font-size: $font-size-base) {
-  // Get the border width value into your font unit of choice
-  $border-width: if(unit($width) == "px", px-to-font-unit($width), $width);
-
-  @include rem(border-width, $border-width);
   @include leading(padding, $lines, $font-size-base, $width);
+  border-width: u($width, rem);
   border-style: solid;
 }
 
 @mixin border-side($side, $width: 1px, $lines: 1, $font-size: $font-size-base) {
-  // Get the border width value into your font unit of choice
-  $border-width: if(unit($width) == "px", px-to-font-unit($width), $width);
-
-  @include rem(border-#{$side}-width, $border-width);
   @include leading(padding-#{$side}, $lines, $font-size-base, $width);
+  border-#{$side}-width: u($width, rem);
   border-#{$side}-style: solid;
 }
 
