--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -14,7 +14,7 @@
 @import "lib/bourbon/bourbon";       // v3.2.0.beta.2
 @import "lib/neat/neat";             // v1.6.0.pre
 
-// // Functions
+// Functions
 @import "functions/absolute-unit";
 @import "functions/convert-unit";
 @import "functions/leading";
@@ -22,16 +22,16 @@
 @import "functions/relative-unit";
 @import "functions/strip-unit";
 
-// // Variables
+// Variables
 @import "breakpoints";
 @import "colors";
 @import "type";
-@import "components";
+@import "style";
 @import "debug";
 @import "grid";
 @import "main";
 
-// // Mixins
+// Mixins
 @import "mixins/debug";
 @import "mixins/font-feature-settings";
 @import "mixins/font-size";
@@ -42,8 +42,8 @@
 @import "mixins/leading";
 @import "mixins/leading-borders";
 @import "mixins/placeholder";
-@import "mixins/rem";
 @import "mixins/tab-focus";
 @import "mixins/text-hide";
 @import "mixins/text-overflow";
+@import "mixins/user-select";
 @import "mixins/visual-baseline";
