--- a/assets/stylesheets/src/styles.scss
+++ b/assets/stylesheets/src/styles.scss
@@ -16,16 +16,4 @@
 @import "base/base";
 @import "components/components";
 
-// Styles like this
-// Size in rems with no px fallback
-// ----------------------------------------------------------------------------
-
-/*
-
-.element {
-  font-size: $font-size-h1;
-  line-height: $leading($font-size-h1);
-  margin-bottom: $leading 0;
-}
-
-*/
+// @todo: forms
