--- a/assets/stylesheets/src/styles.scss
+++ b/assets/stylesheets/src/styles.scss
@@ -1,7 +1,9 @@
 
- //  _____         _______ _______ _______
- // |_____] |      |_____|    |    |______
- // |       |_____ |     |    |    |______
+//  '||''|.  '||            .
+//   ||   ||  ||   ....   .||.    ....
+//   ||...|'  ||  '' .||   ||   .|...||
+//   ||       ||  .|' ||   ||   ||
+//  .||.     .||. '|..'|'  '|.'  '|...'
 
 // Title:      Plate
 // Version:    0.0.1
