--- a/assets/stylesheets/src/base/_main.scss
+++ b/assets/stylesheets/src/base/_main.scss
@@ -6,13 +6,13 @@
 
 html {
   -webkit-tap-highlight-color: rgba(0,0,0,0); // disable mobile Safari tap highlight
-  font-size: convert-unit(14px, "%");
+  font-size: u(14px, "%");
   min-height: 100%;
   overflow-y: scroll;
 
   // Base font size on small screens & up
   @include media($screen-sm) {
-    font-size: convert-unit($font-size-root, "%");
+    font-size: u($font-size-root, "%");
   }
 }
 
