--- a/assets/stylesheets/src/settings/_debug.scss
+++ b/assets/stylesheets/src/settings/_debug.scss
@@ -12,5 +12,5 @@ $visual-grid-index:         back !default;
 $visual-grid-opacity:       0.5 !default;
 
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
-$visual-baseline:           true !default;
+$visual-baseline:           false !default;
 $visual-baseline-color:     $red !default; // hex value without the #
