--- a/assets/stylesheets/src/components/components.scss
+++ b/assets/stylesheets/src/components/components.scss
@@ -11,12 +11,6 @@
 // should begin with an underscore.
 
 
-// Base
-@import "buttons";
-// @import "forms";
-// @import "code";
-// @import "tables";
-
 // Navigation
 
 // Media
@@ -29,3 +23,7 @@
 // @import "progress";
 // @import "accordion";
 // @import "tabs";
+
+
+// Utilities
+@import "utilities";
