--- a/assets/stylesheets/src/base/base.scss
+++ b/assets/stylesheets/src/base/base.scss
@@ -12,23 +12,12 @@
 // styles, create a new `.scss` file and import it below. All partials
 // should begin with an underscore.
 
-// Base
+// Setup
 @import "normalize";
 @import "main";
 
-// Type
-@import "code";
-@import "emphasis";
-@import "fancies";
-@import "headings";
-@import "links";
-@import "lists";
-@import "misc";
-@import "paragraphs";
-@import "quotes";
-
-// Images
-@import "images";
-
-// Utilities
-@import "utilities";
+// Base styles
+@import "type/type";
+@import "buttons/buttons";
+@import "forms/forms";
+@import "tables/tables";
