--- a/assets/stylesheets/src/base/type/_variables.scss
+++ b/assets/stylesheets/src/base/type/_variables.scss
@@ -1,8 +1,8 @@
 // ============================================================================
-// Code
+// Type Variables
 // ============================================================================
 
-// Variables
+// Code
 $code-font-family:          $mono;
 $code-color:                #c7254e !default;
 $code-bg:                   #f9f2f4 !default;
@@ -15,29 +15,5 @@ $pre-color:                 $gray-dark !default;
 $pre-border-color:          $gray-light !default;
 $pre-scrollable-max-height: 340px !default;
 
-// Base styles
-// ----------------------------------------------------------------------------
-
-code,
-pre {
-  background-color: $code-bg;
-  color: $code-color;
-  font-family: $code-font-family;
-}
-
-pre {
-  @include margin-bottom(1);
-  @include padding(1);
-  background: $pre-bg;
-  color: $pre-color;
-  display: block;
-  max-height: $pre-scrollable-max-height;
-  white-space: pre-wrap;
-  white-space: pre;
-  word-break: break-all;
-  word-wrap: break-word;
-}
-
-pre code {
-  font-size: 12px;
-}
+// Lists
+$dl-offset-horizontal:      12em;
