More rearranging back to flat

--- a/assets/stylesheets/src/base/_lists.scss
+++ b/assets/stylesheets/src/base/_lists.scss
@@ -4,6 +4,11 @@
 
 // @todo: lists: http://j.eremy.net/align-lists-flush-left/
 
+// Variables
+// ----------------------------------------------------------------------------
+
+$dl-offset-horizontal:      12em;
+
 // Ordered and Unordered lists
 // ----------------------------------------------------------------------------
 
