--- a/assets/stylesheets/src/base/_forms.scss
+++ b/assets/stylesheets/src/base/_forms.scss
@@ -23,6 +23,34 @@ $input-box-shadow:              inset 0 1px 3px rgba(black, .075);
 
 $form-horiz-label-width:        12em;
 
+// Mixins
+// ----------------------------------------------------------------------------
+
+@mixin form-control-validation($text-color: #555, $border-color: #ccc, $background-color: #f5f5f5) {
+  // Color the label and help text
+  label,
+  .form-help {
+    color: $text-color;
+  }
+
+  // Set the border and box shadow on specific inputs to match
+  .control {
+    @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
+    border-color: $border-color;
+
+    &:focus {
+      $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
+      @include box-shadow($shadow);
+      border-color: darken($border-color, 10%);
+    }
+  }
+
+  // Optional feedback icon
+  .form-control-feedback {
+    color: $text-color;
+  }
+}
+
 // Form elements
 // ----------------------------------------------------------------------------
 
@@ -197,13 +225,28 @@ input[type="checkbox"], {
   color: $gray-light;
 }
 
+// All this is is left-flaoted text with a state color
+// <span class="text-inline">
 .form-help-inline {
   @extend .form-help;
-  display: inline;
+  display: inline-block;
+  margin-left: .5em;
 }
 
 // Validation
 // ----------------------------------------------------------------------------
+
+.has-success {
+  @include form-control-validation($state-success-text, $state-success-text, $state-success-bg);
+}
+
+.has-warning {
+  @include form-control-validation($state-warning-text, $state-warning-text, $state-warning-bg);
+}
+
+.has-error {
+  @include form-control-validation($state-danger-text, $state-danger-text, $state-danger-bg);
+}
 
 // Sizing
 // ----------------------------------------------------------------------------
