--- a/assets/stylesheets/src/base/base.scss
+++ b/assets/stylesheets/src/base/base.scss
@@ -20,6 +20,7 @@
 @import "code";
 @import "emphasis";
 @import "fancies";
+@import "fonts";
 @import "headings";
 @import "links";
 @import "lists";
